--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <!-- title -->
+    <h1>Unsplash API - Infinite Scroll!</h1>
+
+    <!-- Loader -->
+    <div class="loader" id="loader" hidden>
+      <img src="loader.svg" alt="" />
+    </div>
+
     <!-- Script -->
     <script src="script.js"></script>
   </body>
