Adds function to display photos

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       <img src="loader.svg" alt="" />
     </div>
 
+    <!-- image container -->
+    <div class="image-container" id="image-container"></div>
+
     <!-- Script -->
     <script src="script.js"></script>
   </body>
